--- a/environment.yml
+++ b/environment.yml
@@ -1,26 +1,16 @@
-name: zoe
+name: myenv
 channels:
   - pytorch
-  - nvidia
   - conda-forge
+  - defaults
 dependencies:
-  - cuda=11.7.1
-  - h5py=3.7.0
-  - hdf5=1.12.2
-  - matplotlib=3.6.2
-  - matplotlib-base=3.6.2
-  - numpy=1.24.1
-  - opencv=4.6.0
-  - pip=22.3.1
-  - python=3.9.7
-  - pytorch=1.13.1
-  - pytorch-cuda=11.7
-  - pytorch-mutex=1.0
-  - scipy=1.10.0
-  - torchaudio=0.13.1
-  - torchvision=0.14.1
+  - python=3.10.12
+  - pip
   - pip:
-    - huggingface-hub==0.11.1
-    - timm==0.6.12
-    - tqdm==4.64.1
-    - wandb==0.13.9
+      - timm==0.6.7
+      - torch==2.0.1
+      - torchvision==0.15.2
+      - numpy==1.23.5
+      - pillow==9.4.0
+      - gradio==4.18.0
+      - opencv-python==4.6.0.66
