--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-h5py==3.7.0
-matplotlib==3.6.2
-numpy==1.24.1
-opencv-python==4.6.0.66
-scipy==1.10.0
-torch==1.13.1
-torchaudio==0.13.1
-torchvision==0.14.1
-huggingface-hub==0.11.1
-timm==0.6.12
-tqdm==4.64.1
-wandb==0.13.9
-Pillow==10.0
-scipy==1.10.0
+timm==0.6.7
+torch==2.0.1
+torchvision==0.15.2
+numpy==1.23.5
+pillow==9.4.0
+gradio==4.18.0
 opencv-python==4.6.0.66
